<resources>
    <string name="app_name">MarketplacePUJ</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="correo_electronico">Correo</string>
    <string name="contrasena">Password</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="logo_app">Logo APP</string>
    <string name="registrarse">Crear cuenta</string>
    <string name="olvide_mi_contrasena">Olvide mi contraseña</string>
    <string name="imagen_para_registro_usuario">Imagen para registro usuario</string>
    <string name="my_messages">Mis mensajes</string>
    <string name="write_message">Escribe un mensaje</string>
    <string name="send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_card">Add a Card</string>

    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="payment_card">Payment Card</string>

    <string name="field_is_empty">This field cannot be empty</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="card_has_expired">Card has expired</string>
    <string name="invalid_cvv">CVV should have 3 or 4 digits</string>
    <string name="date_not_specified">Please, specify date</string>
    <string name="card_not_found">Card not found</string>
    <string name="card_already_added">Card already added</string>
    <string name="generic_validation_error">Check correctness of the input</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="invalid_password_field">Wrong password format. At least 8 charters, both latin symbols and numbers</string>
    <string name="invalid_email_field">Invalid e-mail address</string>
    <string name="unknown_error">An unknown error happened</string>
    <string name="generic_not_found_error">Item not found</string>
    <string name="wrong_confirmation_code">Wrong confirmation code</string>
    <string name="pins_don_t_match">PINs don\'t match</string>
    <string name="error_template">Error: %1$s</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string name="error_biometrics_not_available">Biometrics not available</string>
    <string name="insufficient_card_balance">Insufficient card balance.</string>
    <string name="transaction_not_found">Transaction not found</string>
    <string name="save_card">Save Card</string>
    <string name="default_card">Default card</string>
    <string name="error_happened">An error happened...</string>
    <string name="try_again">Try Again</string>
    <string name="balance">Balance</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="card_details">Card details</string>
    <string name="set_card_as_default">Set card as default</string>
    <string name="remove_card">Remove card</string>
    <string name="billing_address">Billing Address</string>
    <string name="added_on">Added On</string>
    <string name="mis_opiniones">Mis opiniones</string>
    <string name="opina">Opina y ayuda a más personas</string>
    <string name="metodo_pago">Método de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="con_tarjeta">Con Tarjeta</string>
    <string name="continue_msg">Continuar</string>
    <string name="orden_creada">Orden creada con exito</string>
    <string name="revisar_historial">Puede revisarla en cualquier momento en su historial</string>
</resources>