<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.example.marketplacepuj.ui.features.login.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/logo_app"
            android:padding="16dp"
            android:shape="rectangle"
            android:src="@drawable/ic_logo"
            android:textColor="#2C5697"
            app:layout_constraintBottom_toTopOf="@id/etCorreo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/correo_electronico"
            android:backgroundTint="#F8CD00"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:shape="rectangle"
            android:textColor="#2C5697"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/contrasena"
            android:backgroundTint="#F8CD00"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="16dp"
            android:shape="rectangle"
            android:textColor="#2C5697"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/etCorreo" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2C5697"
            android:padding="16dp"
            android:shape="rectangle"
            android:text="@string/iniciar_sesion"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvOlvidarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"

            android:paddingTop="30dp"
            android:text="@string/olvide_mi_contrasena"
            android:textAlignment="center"
            android:textColor="#2C5697"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:id="@+id/tvRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"

            android:fontFamily="sans-serif-medium"
            android:paddingTop="30dp"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOlvidarContrasena" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>